# FER_Furhat

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: classifier.py  convnext.py  main.py  test.ipynb  test.py  test_furhat.py  test_nathan.ipynb  utils.py  vgg.ipynb  vgg.py  vgg11.py
src/train/: convnext.py  fine-tuning.py  train.py  utils.py  vgg.py
