[project]
name = "tpe_issd"
version = "0.1.0"
description = "Facial expression recognition using deep learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
