[project]
name = "tpe_issd"
version = "0.1.0"
description = "Reconnaissance d'expressions faciales à l'aide de deep learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "furhat-remote-api>=1.0.2",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pyrealsense2>=2.55.1.6486",
]


[project.optional-dependencies]
cpu = ["torch>=2.7.0", "torchvision>=0.22.0"]
cu124 = ["torch>=2.6.0", "torchvision>=0.21.0"]
cu126 = ["torch>=2.7.0", "torchvision>=0.22.0"]
cu128 = ["torch>=2.7.0", "torchvision>=0.22.0"]


[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
        { extra = "cu126" },
        { extra = "cu128" },
    ],
]


[tool.uv.sources]

torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
